[Fix] Fix background not blurring on `forceEnd` and make small improvements in aesthetics

--- a/src/components/Content/content.module.css
+++ b/src/components/Content/content.module.css
@@ -10,10 +10,6 @@
   filter: blur(0);
 }
 
-.force-blur {
-  filter: blur(10px);
-}
-
 @keyframes blur {
   0% {
     filter: blur(0px);
